css/main.css
html {
    background: #626261 url('/img/background_ua.jpg') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

body {
    background: none;
    text-align: center;
}

.hide {
    display: none;
}

.logo-light {
    position: relative;
    background: url('/img/logo-light.png') 0 0 no-repeat;
    background-size: contain;
    width: 218px;
    height: 45px;
    margin: 5vh auto 0;
    z-index: 3;
    opacity: 1;
    -webkit-transition: opacity 3s ease-in-out;
    -moz-transition: opacity 3s ease-in-out;
    -ms-transition: opacity 3s ease-in-out;
    -o-transition: opacity 3s ease-in-out;
}

.logo-light.fade {
    opacity: 0;
}

.banner-tour {
    position: fixed;
    right: 0;
    height: 305px;
    top: 50%;
    margin-top: -150px;
    z-index: 2;
    opacity: 1;
    overflow-y: auto;
}

.about-link {
    position: absolute;
    top: 5vh;
    margin-top: 5px;
    right: 200px;
    color: #e9e9e8;
    font-family: FranklinGothicBook;
    text-decoration: none;
    opacity: 0.8;
}

.about-link:hover {
    text-decoration: underline;
    opacity: 0.9;
}

.play-album {
    color: #f1f1f1;
    font-family: FranklinGothicBook;
    text-decoration: none;
    font-size: 36px;
    margin-top: 20vh;
    display: inline-block;
    cursor: pointer;
}

.play-album:hover {
    opacity: 0.9;
}

.play-album .title {
    max-width: 280px;
    display: inline-block;
    text-align: left;
    vertical-align: middle;
    line-height: 22px;
}

.play-album img {
    vertical-align: middle;
    width: 120px;
    height: 120px;
    margin-right: 30px;
}

.play-album small {
    font-size: 16px;
}

.frontpage-footer {
    position: absolute;
    left: 50%;
    bottom: 4vh;
    margin-left: -60px;
    color: #e9e9e8;
    text-align: left;
    font-family: FranklinGothicBook;
    line-height: 30px;
    opacity: 0.8;
}

.frontpage-footer a {
    color: #e9e9e8;
}

.frontpage-footer a:hover {
    opacity: 0.9;
}

.preplay-modal {
    position: fixed;
    overflow-x: hidden;
    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    width: 100%;
    background: rgba(0, 0, 0, 0.55);
    z-index: 2;
}

.preplay-content {
    overflow: hidden;
    position: relative;
    max-width: 770px;
    margin: -180px auto;
    padding: 30px 0;
    background: rgba(0, 0, 0, 0.8);
    height: 300px;
    top: 50%;
}

.preplay-content .favorites-container,
.preplay-content .note {
    box-sizing: border-box;
}

.preplay-content .favorites-container {
    width: 29%;
    float: left;
    height: 100%;
    overflow: hidden;
    border-right: 2px solid rgba(209, 209, 209, 0.6);
    padding: 0 35px;
    text-align: right;
}

.preplay-content .note {
    width: 71%;
    float: right;
    color: rgba(233, 233, 232, 0.8);
    font-size: 14px;
    font-family: FranklinGothicBook;
    text-align: left;
    padding: 0 34px;
}

.preplay-content .note p {
    font-size: 15px;
    margin: 0 0 16px;
    line-height: 20px;
}

.note .icon:before {
    content: '';
    background: no-repeat center;
    background-size: contain;
    height: 22px;
    margin: 0 5px;
    display: inline-block;
    vertical-align: middle;
}

.note .time:before {
    background-image: url('/img/itime.png');
    width: 20px;
}

.note .list:before {
    background-image: url('/img/iplaylist.png');
    width: 32px;
    height: 28px;
    margin: 0;
}

.note .share:before {
    background-image: url('/img/ishare.png');
    width: 22px;
    margin-left: 0;
}

.note .lyric:before {
    background-image: url('/img/ilyric-light.png');
    width: 13px;
    margin-right: 10px;
}

.favorites {
    margin-top: 18px;
    line-height: 0;
}

.favorites>div {
    background: 0 0 no-repeat;
    background-size: contain;
    width: 130px;
    height: 70px;
    display: inline-block;
    margin-bottom: 25px;
    position: relative;
}

.favorites>div:before {
    content: '';
    position: absolute;
    top: 50%;
    left: 50%;
    margin: -17px 0 0 -17px;
    width: 35px;
    height: 35px;
    background: url('/img/playflat.png') 0 0 no-repeat;
    background-size: contain;
}

.favorites>div:hover {
    opacity: 0.8;
    cursor: pointer;
}

.note .view-album-cta {
    display: block;
    opacity: 0.7;
    background: #fff;
    border: 1px solid rgba(0, 0, 0, 0.5);
    font-size: 20px;
    line-height: 46px;
    text-align: center;
    width: 180px;
    height: 46px;
    color: #000;
    text-decoration: none;
    cursor: pointer;
}

.note .view-album-cta:hover {
    opacity: 0.75;
}

.playlist-album {
    background: rgba(0, 0, 0, 0.9);
    z-index: 2;
    text-align: left;
    padding: 5px 0 0;
    width: auto;
    height: 100%;
    display: inline-block;
    position: absolute;
    top: 0;
    right: 0;
    -webkit-transition: 0.4s;
    -moz-transition: 0.4s;
    -o-transition: 0.4s;
    transition: 0.4s;
}

.playlist-album h2 {
    text-align: left;
    font-size: 16px;
    letter-spacing: 5px;
    margin: 4.5vh 45px 40px;
}

.playlist-hide {
    margin-right: -500px;
}

.album-part-cta {
    display: block;
    color: rgba(233, 233, 232, 0.8);
    font-family: FranklinGothicBook;
    font-size: 16px;
    letter-spacing: 1px;
    text-decoration: none;
    cursor: pointer;
    margin: 20px 0;
    padding-right: 45px;
}

.album-part-cta:hover {
    opacity: 0.8;
}

.album-part-cta:before {
    content: '';
    background: url('/img/playflat.png') no-repeat center;
    background-size: contain;
    height: 30px;
    width: 30px;
    margin: 0 25px 0 30px;
    display: inline-block;
    vertical-align: middle;'
}

.album-part-cta time {
    font-size: 10px;
    margin-left: 10px;
    color: color: rgba(209, 209, 209, 0.8);;
}

.current {
    opacity: 0.5;
}

@media only screen and (max-height: 400px) {
    .banner-tour {
        height: 180px;
        margin-top: -90px;
    }

    .banner-tour img {
        height: 180px;
        width: auto;
    }
}

@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
    html {
        background-image: url('/img/background_ua@2x.jpg');
    }

    .logo-light {
        background-image: url('/img/logo-light@2x.png');
    }
}

@media only screen and (min-width: 668px) and (max-width: 1024px) {
    .about-link {
        right: 160px;
        top: 5.5vh;
    }
}

@media only screen and (max-width: 375px) {
    .logo-light {
        margin-top: 65px;
    }

    .about-link {
        right: 155px;
        top: 3.5vh;
    }

    .frontpage-footer {
        left: 30px;
        margin: 20px auto;
    }

    .play-album .title {
        text-align: center;
        margin-top: 20px;
    }

    .play-album {
        margin-top: 38px;
    }
}

@media only screen and (min-width: 376px) and (max-width: 667px) {
    .logo-light {
        margin-top: 60px;
    }

    .about-link {
        right: 160px;
        top: 5.5vh;
    }

    .frontpage-footer {
        position: static;
        margin: 20px auto;
        text-align: center;
    }

    .play-album {
        margin-top: 20px;
    }
}

